--- a/index.html
+++ b/index.html
@@ -41,11 +41,19 @@
     <div class="images">
       <img class="mainimg" src="images/image-product-1.jpg" alt="">
         <div class="smallimgs">
-          <img src="images/image-product-1-thumbnail.jpg" alt="">
-          <img src="images/image-product-2-thumbnail.jpg" alt="">
-          <img src="images/image-product-3-thumbnail.jpg" alt="">
-          <img src="images/image-product-4-thumbnail.jpg" alt="">
+          <img class="img1" src="images/image-product-1-thumbnail.jpg" alt="">
+          <img class="img2" src="images/image-product-2-thumbnail.jpg" alt="">
+          <img class="img3" src="images/image-product-3-thumbnail.jpg" alt="">
+          <img class="img4" src="images/image-product-4-thumbnail.jpg" alt="">
 
+
+          <div>
+            <img class="img11" src="images/image-product-1.jpg" alt="">
+            <img class="img22" src="images/image-product-2.jpg" alt="">
+            <img class="img33" src="images/image-product-3.jpg" alt="">
+            <img class="img44" src="images/image-product-4.jpg" alt="">
+
+          </div>
         </div>
 
     </div>
@@ -63,9 +71,9 @@
 
       <div class="inps">
         <div class="amount">
-          <button>-</button>
-          <p>0</p>
-          <button>+</button>
+          <button class="minus">-</button>
+          <p class="amountp">0</p>
+          <button class="plus">+</button>
         </div>
 
         <button class="cart"><img src="images/icon-cart.svg" alt=""> add to cart</button>
@@ -77,5 +85,7 @@
 
 
   </div>
+
+  <script src="tfoc.js"></script>
 </body>
 </html>
