--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 
   <div class="profile">
-    <img src="images/icon-cart.svg" alt="">
+    <img class="iconcart" src="images/icon-cart.svg" alt="">
     <img class="pfp" src="images/image-avatar.png" alt="">
   </div>
   </div>
@@ -85,6 +85,26 @@
 
 
   </div>
+
+  <div class="cartpopup">
+    <p class="carthead">Cart</p>
+    <div class="item">
+    <div class="cartprod">
+      <img class="smallimg" src="images/image-product-1-thumbnail.jpg" alt="">
+      <div class="carttxt">
+        <p>Fall Limited Edition Sneakers</p>
+        <p>$125.00 x 3 <span class="threek">$375.00</span></p>
+      </div>
+      <img class="removeicon" src="images/icon-delete.svg" alt="">
+    </div>
+
+    <button class="checkout">
+      <p>Checkout</p>
+    </button>
+  </div>
+
+  <p class="empty">Your cart is empty.</p>
+</div>
 
   <script src="tfoc.js"></script>
 </body>
